ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: "jenkins"
  annotations:
    kubernetes.io/tls-acme: "true"
spec:
  tls:
  - secretName: jenkins-ui
    hosts:
    - jenkins.example.com
  rules:
  - host: jenkins.example.com
    http:
      paths:
      # The * is needed so that all traffic gets redirected to nginx
      - path: /
        backend:
          serviceName: jenkins-ui
          servicePort: 8080
